2005-11-26  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-sources.c: Fix lineart mode for Epson 3490
	* doc/descriptions/snapscan.desc: Update status for Benq 5000

2005-11-26  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-scsi.c: Fix for Benq 5000
	* backend/snapscan.conf: Replace esfw52.bin with dummy filename entry

2005-11-25  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* backend/artec_eplus48u.conf, backend/snapscan.conf: Use default
	  firmware dirs in config files
	* doc/sane-artec_eplus48u.man, doc/sane-snapscan.man: Use default
	  firmare dirs in man pages

2005-11-25  Ulrich Deiters <ulrich.deiters@uni-koeln.de>

	* backend/canon-sane: fixed usage of an uninitialized variable

2005-11-25  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.da.po: Updated Danish translation (from Mogens
	  Jaeger <mogensjaeger@get2net.dk>). 

2005-11-25  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-sources.c: Fix for grayscale / linart for Epson 3490
	  at 3200 DPI

2005-11-25  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* po/sane-backends.ru.po: Fixing some fuzzies

2005-11-24  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* doc/gamma4scanimage.man, doc/sane-abaton.man, doc/sane-agfafocus.man,
	  doc/sane-apple.man, doc/sane-artec.man, doc/sane-avision.man,
	  doc/sane-bh.man, doc/sane-canon.man, doc/sane-canon630u.man,
	  doc/sane-config.man, doc/sane-coolscan.man, doc/sane-coolscan2.man,
	  doc/sane-dc210.man, doc/sane-dc240.man, doc/sane-dc25.man,
	  doc/sane-dmc.man, doc/sane-epson.man, doc/sane-find-scanner.man,
	  doc/sane-fujitsu.man, doc/sane-genesys.man, doc/sane-gphoto2.man,
	  doc/sane-gt68xx.man, doc/sane-hp.man, doc/sane-hp4200.man,
	  doc/sane-hp5400.man, doc/sane-ibm.man, doc/sane-leo.man,
	  doc/sane-lexmark.man, doc/sane-ma1509.man, doc/sane-matsushita.man,
	  doc/sane-microtek.man, doc/sane-microtek2.man, doc/sane-mustek.man,